# git-fixup-commands

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
test/: append.py  test.py
test/patches/: a.patch  merge-a.patch  merge-b.patch
test/repos/: merge.bundle  repo.bundle
test/tests/Test Amend/: log.diff  log_new.txt  test.json
test/tests/Test First/: log_new.txt  test.json
test/tests/Test Flag/: log.diff  log_new.txt  test.json
test/tests/Test HEAD (fixup)/: log.diff  log_new.txt  test.json
test/tests/Test HEAD (reword)/: diff.txt  log.diff  log_new.txt  test.json
test/tests/Test Interactive/: diff.txt  diff_staged.txt  log.diff  test.json
test/tests/Test Invalid/: out.txt  test.json
test/tests/Test Merge Ancestor/: log.diff  log_new.txt  test.json
test/tests/Test Merge Branch (b)/: log.diff  log_new.txt  test.json
test/tests/Test Merge Branch (main)/: log.diff  log_new.txt  test.json
test/tests/Test Merge Commit/: log.diff  log_new.txt  test.json
test/tests/Test Middle/: log_new.txt  log_old.txt  test.json
test/tests/Test No Rebase Merges (arg)/: log_new.txt  log_old.txt  test.json
test/tests/Test No Rebase Merges (config)/: log.diff  test.json
test/tests/Test Pause/: log_new.txt  test.json
test/tests/Test Pause (-p)/: log.diff  test.json
test/tests/Test Pause + Interactive/: test.json
test/tests/Test Pause + Interactive (-i)/: out.txt  test.json
test/tests/Test Relative/: log.diff  test.json
test/tests/Test Reword/: log.diff  log_new.txt  test.json
