[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-fixup-commands"
version = "1.0.0"
requires-python = ">= 3.7"
authors = [{name = "Brandon Fowler"}]
description = "A suite to commands to easily fixup previous Git commits using `git commit --fixup` and `git rebase`."
readme = "README.md"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
keywords = ["git", "fixup", "amend", "reword", "commit", "rebase"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

[project.scripts]
git-fixup = "main:fixup"
git-amend = "main:amend"
git-reword = "main:reword"

[project.urls]
homepage = "https://www.brandonfowler.me/git-fixup-commands/"
source = "https://github.com/BrandonXLF/git-fixup-commands/"
issues = "https://github.com/BrandonXLF/git-fixup-commands/issues/"

[tool.hatch.build.targets.sdist]
include = ["main.py"]

[tool.hatch.build.targets.wheel]
include = ["main.py"]